force-app/main/default/objects/b2ble_cpq_cnctr__B2B_to_CPQ_Settings__mdt/b2ble_cpq_cnctr__B2B_to_CPQ_Settings__mdt.object-meta.xml
<CustomObject>
    <label>B2B to CPQ Settings</label>
    <pluralLabel>B2B to CPQ Settings</pluralLabel>
</CustomObject>