force-app/main/default/objects/b2ble_cpq_cnctr__B2B_to_CPQ_Settings__mdt/fields/b2ble_cpq_cnctr__Order_Lifecycle_Type__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Order_Lifecycle_Type__c</fullName>
    <label>Order Lifecycle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MANAGED</fullName>
                <default>true</default>
                <label>MANAGED</label>
            </value>
            <value>
                <fullName>UNMANAGED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>