force-app/main/default/objects/b2ble_cpq_cnctr__B2B_to_CPQ_Settings__mdt/fields/b2ble_cpq_cnctr__Store_Name__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Store_Name__c</fullName>
    <description>WebStore.Name value</description>
    <inlineHelpText>WebStore.Name value</inlineHelpText>
    <label>Store Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>