force-app/main/default/objects/b2ble_cpq_cnctr__B2B_to_CPQ_Settings__mdt/fields/b2ble_cpq_cnctr__Use_Multiple_Price_Books__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Use_Multiple_Price_Books__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark TRUE if Store uses more than one Price Book.  Setting used by B2B to CPQ connector to inform Quote user that prices could be sourced from more than one Price Book.</description>
    <inlineHelpText>Mark TRUE if Store uses more than one Price Book.  Setting used by B2B to CPQ connector to inform Quote user that prices could be sourced from more than one Price Book.</inlineHelpText>
    <label>Use Multiple Price Books</label>
    <type>Checkbox</type>
</CustomField>